CHANGES
-------
Version 1.2 - In Progress

04/04/2020 First crack at a Curio repl.  Idea borrowed from the asyncio
           REPL.  For example:

              bash $ python -m curio
              Use "await" directly instead of "curio.run()".
              Type "help", "copyright", "credits" or "license" for more information.
              >>> import curio
              >>> await curio.sleep(4)
	      >>>

03/24/2020 Added a pytest plugin for Curio. Contributed by Keith Dart.
           See curio/pytest_plugin.py.

03/02/2020 Slight refinement to TaskGroup result reporting. If no tasks
           are spawned in a TaskGroup g, then g.exception will return None
           to indicate no errors.  g.result will raise an exception
           indicating that no successful result was obtained. Addresses
           issue #314.

Version 1.1 - March 1, 2020
---------------------------
02/24/2020 Fixed a very subtle edge case involving epoll() and duplicated
           file descriptors on Linux. The fix required a new trap
           _io_release() to explitly unregister a file descriptor
           before closing. This must be embedded in any close()
           implementation prior to actually calling close() on a real
           file object.  No changes should be necessary in existing
           user-level Curio code.  Bug #313 reported by Ondřej Súkup.

Version 1.0 - February 20, 2020
-------------------------------

**** SPECIAL NOTE ****: For the past few years, Curio has been been an
experimental project.  However, as it moves towards having a more
"stable" release, I feel that it is better served by being small as
opposed to providing every possible feature like a framework. Thus, a wide range of
minor features have either been removed or refactored. If this broke 
your code, sorry. Some features have been moved to the examples
directory.   If something got removed and you'd like to lobby for its 
return, please submit a bug report. -- Dave
