@@ -3,7 +3,9 @@ CHANGES
 Version 1.2 - In Progress
 
 04/04/2020 First crack at a Curio repl.  Idea borrowed from the asyncio
-           REPL.  For example:
+           REPL.  If you run `python -m curio` it will start a REPL
+	   in which Curio is already running in the background. You
+	   can directly await operations at the top level. For example:
 
               bash $ python -m curio
               Use "await" directly instead of "curio.run()".
@@ -11,6 +13,11 @@ Version 1.2 - In Progress
               >>> import curio
               >>> await curio.sleep(4)
 	      >>>
+
+           Pressing Control-C causes any `await` operation to be cancelled
+	   with a `curio.TaskCancelled` exception.   For normal operations
+	   not involving `await, Control-C raises a `KeyboardInterrupt` as
+           normal.  Note: This feature requires Python 3.8 or newer. 
 
 03/24/2020 Added a pytest plugin for Curio. Contributed by Keith Dart.
            See curio/pytest_plugin.py.
